# docury_server

./: README.md  pyproject.toml
app/: config.py  main.py  utils.py
app/routers/: chat.py  file.py  url.py
app/services/: document.py  rag.py  url.py  vector.py
eval/: ragas.ipynb  testdata.csv
