[project]
name = "rag-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.0",
    "docling[ocr]>=2.64.1",
    "faiss-cpu>=1.13.1",
    "fastapi[standard]>=0.124.0",
    "fastembed>=0.7.4",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-google-genai>=3.2.0",
    "langchain-redis>=0.2.5",
    "loguru>=0.7.3",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "selenium>=4.39.0",
    "unstructured>=0.18.21",
    "wikipedia>=1.4.0",
]
