[project]
name = "rag-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.0",
    "docling[ocr]>=2.64.1",
    "faiss-cpu>=1.13.1",
    "fastapi[standard]>=0.124.0",
    "fastembed>=0.7.4",
    "ipykernel>=7.1.0",
    "langchain>=1.1.2",
    "langchain-aws>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-google-genai>=3.2.0",
    "langchain-redis>=0.2.5",
    "langfuse>=3.10.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pip>=25.3",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "ragas>=0.4.1",
    "redis>=6.4.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "unstructured>=0.18.21",
    "wikipedia>=1.4.0",
]
